--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.2.1
+  Fixes:
+    - Dockerfile includes lxml python library for the docker image, needed by Amazon module.
+  Features:
+    - N/A
+
 1.2.0
   Fixes:
     - N/A
